Register to eureka service
Register to eureka service

--- a/stockdbservice/src/main/resources/application.properties
+++ b/stockdbservice/src/main/resources/application.properties
@@ -15,3 +15,4 @@ flyway.ignoreFailedFutureMigration=false
 spring.flyway.validate-on-migrate= false
 spring.flyway.ignore-future-migrations= true
 spring.flyway.ignore-missing-migrations= true
+flyway.baseline-on-migrate=true
